--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 				</div>
 			</div>
 			<div class="category_subtitle halfwidth fadeIn" style="visibility:hidden" id="delay">
-				A designer and engineer with a passion for <div class="inline_tag" id="tag1"></div> and <div class="inline_tag" id="tag2">Human-Centered Design</div>
+				A designer, engineer, goofball, and lover of the outdoors with a passion for <div class="inline_tag" id="tag1"></div> and <div class="inline_tag" id="tag2">Human-Centered Design</div>
 			</br></br>
-				Designer, engineer, goofball, and lover of the outdoors. Currently eating chocolate, digital nomading along the West Coast, and helping folks navigate the complicated healthcare claim filing world with SuperBill.
+				Currently eating chocolate, digital nomading along the West Coast, and helping folks navigate the complicated healthcare claim filing world with SuperBill.
 			</br></br>
 				<!-- This site is under construction during <p id="month" style="display:inline"></p> <p id="year" style="display:inline"></p> (devs, there are bugs! UXDs, shield your eyes!) but write-ups will be written and code will be coded soon! -->
 			</div>
