updating skating page

--- a/projects/foca17.html
+++ b/projects/foca17.html
@@ -55,7 +55,7 @@
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
 
-
+        <div class="card_tag incontent">Eden Prairie, MN</div>
 		<div class="card_title">Background</div><br/>
         <div class="content_text">
             <img class="summary_image" src="../assets/skating-background.png"/>
@@ -129,8 +129,9 @@
 
 
 
-
-            <div class="card_title">March 2022: First sessions</div>
+            <div class="card_tag incontent">Washington, DC</div>
+            <div class="card_title">March 2022: First sessions
+            </div>
             <div class="content_text">
                     I LOVE skating outside, and thankfully my muscle memory was
                     still there as I visited the DC Sculpture Garden rink with
@@ -146,6 +147,7 @@
  
             </div>
 
+            <div class="card_tag incontent">Arlington, VA</div>
             <div class="card_title">May 2022: Purchasing New Skates</div>
             <div class="content_text">
                     I've used second-hand skates my entire life and hoped that
@@ -169,6 +171,7 @@
             <div class="content_text"> 
 
         </div>
+            <div class="card_tag incontent">Independence, MO</div>
             <div class="card_title">September-November 2022: Getting my existing
             jumps back</div>
             <div class="content_text">
@@ -198,11 +201,22 @@
                 knee/hip flexibility for spread eagles, ina bauers, and deeper
                 edges. 
                 <br/><br/>
-                🚨🚨🚨 HAPPY PLACE ALERT 🚨🚨🚨<br/>
+            </div>
+            <div class="card_tag incontent">Marlborough, NH</div>
+            <div class="card_title">🚨🚨🚨 HAPPY PLACE ALERT 🚨🚨🚨</div>
+            <div class="content_text">
                 Got to skate on a pond at Camp Glen Brook in New Hampshire!
                 Thank you Shep for filming :)
                 <br/><br/>
                 <img class="summary_image" src="../assets/skating-lake.gif"/>
+            </div>
+            <div class="card_tag incontent">San Francisco, CA</div>
+            <div class="card_title">February 2023-May 2023: Getting my first Level 4 (ish) spin!!</div>
+            <div class="content_text">
+                I actually don't think this gif fully counts as a level 4 spin, but if done with a little more ~polish and pizzazz~ it would! It's a camel spin, difficult windmill transition (level 1), sit spin, sit back variation (level 2), non-basic position but pretend it's a little better (level 3), upright variation (level 4!!!)
+                <br/><br/>
+                Also I HIGHLY recommend the Yerba Buena ice rink - the natural light is AMAZING and the adult skating community is so supportive<br/><br/>
+                <img class="summary_image" src="../assets/skating-spin-small.gif"/>
             </div>
 
 		<br>
