--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 			<div class="card_noLink double">
 				<img class="card_image" src="assets/nutshell-climb.png"/>
 				<div class="card_title">Happy body, happy mind</div>
-				<div class="card_description">One day I was struggling with a problem at work, and I had gotten to the point where I was not making any progress. To stop myself from spiraling into frustration, I decided to go climbing... and wouldn't you know it - halfway up a 5.12, I suddenly came up with the idea we ended up implementing. Exercise and sweeeet outdoors vitamin D makes me a happier person and a better designer. It's crazy how many ah-ha moments I have while toproping.</div>
+				<div class="card_description">One day I was struggling with a problem at work, and I had gotten to the point where I was not making any progress. To stop myself from spiraling into frustration, I decided to go climbing... and wouldn't you know it - halfway up a 5.12, I suddenly came up with the idea we ended up implementing. Exercise and sweeeet outdoors vitamin D makes me a happier person and a better designer. It's crazy how many ah-ha moments I have on the sharp end of the rope.</div>
 			</div>
 			<div class="card_noLink double">
 				<img class="card_image" src="assets/nutshell-prejoy.png" id="image"/>
 				<div class="card_title">Moments of Delight</div>
-				<div class="card_description">Obviously this comes after designing something enjoyably usable, but sprinkling in monents of delight - a fun animation, a clever easter egg - can turn a good experience into a memorable one, especially since no one is expecting it.</div>
+				<div class="card_description">Obviously this comes after designing something enjoyably usable, but sprinkling in moments of delight - a fun animation, a clever easter egg - can turn a good experience into a memorable one, especially since no one is expecting it.</div>
 			</div>	
 		</div>
 		<div class="category fadeIn" >
