added embroidery project + strengths/weakness

--- a/about.html
+++ b/about.html
@@ -141,6 +141,58 @@
 			</button></a>
 			</div>
 	</div>
+	<div class="about_container_flex">
+		<div class="about_flex">
+			<div class="section_title">Strengths</div>
+			<div class="about_flex_container">
+				<div class="about_container">
+					<strong>"Getting” it</strong>
+					<br/>
+					Give me a vague, undefined project and I can understand what’s going on & design a solution
+				</div>
+				<div class="about_container">
+					<strong>Learning quickly</strong>
+					<br/>
+					If I don’t know how, I’ll figure it out soon
+				</div>
+				<div class="about_container">
+					<strong>Mentorship</strong>
+					<br/>
+					I excel at and enjoy helping others grow
+				</div>
+				<div class="about_container">
+					<strong>Jill of all trades</strong>
+					<br/>
+					I’m primarily a designer, but I can wear coding and research hats
+				</div>
+			</div>
+		</div>
+		<div class="about_flex">
+			<div class="section_title">Weaknesses</div>
+			<div class="about_flex_container">
+				<div class="about_container">
+					<strong>Long meetings</strong>
+					<br/>
+					Unless I’m actively talking, I won’t be able to focus longer than 30 minutes
+				</div>
+				<div class="about_container">
+					<strong>The vision</strong>
+					<br/>
+					I’m great at executing someone else’s vision, but I struggle coming up with my own
+				</div>
+				<div class="about_container">
+					<strong>Pixel-perfect details</strong>
+					<br/>
+					I often call it “good enough” before we hit 100% perfection
+				</div>
+				<div class="about_container">
+					<strong>Writing</strong>
+					<br/>
+					If you’ve read this far you can already tell I’m not a great writer
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="container_content_wrapper_resume">
 		<div class="container_content_wrapper_content vertical">
 			<div class="container_sideBySide">
