--- a/physical.html
+++ b/physical.html
@@ -100,6 +100,14 @@
 					<div class="card_tag wood">Wood</div>
 				</div>
 			</a>
+			<a href="projects/embroidery.html" class="card">
+				<img class="card_image" src="assets/em-shirt5.png"/>
+				<div class="card_title">Embroidery</div>
+				<div class="card_description">More gifts for my lucky friends and family</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Embroidery</div>
+				</div>
+			</a>
 			<a href="projects/springtime.html" class="card">
 				<img class="card_image" src="assets/stool-1.png"/>
 				<div class="card_title">Springtime</div>
