--- a/projects/embroidery.html
+++ b/projects/embroidery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Springtime</title>
+	<title>Regina | Embroidery</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet">	<link runat="server" rel="icon" type="image/png" href="assets/favicon-01.png">
@@ -37,14 +37,14 @@
 	<div class="container_summary">
 		<div class="section_summary">
 			<div class="caption_container">
-				<img class="summary_image" src="../assets/stool-1.png"/>
+				<img class="summary_image" src="../assets/em-shirt5.png"/>
 			</div>
 		</div>
 		<div class="section_summary_text">
-			<div class="summary_title">Springtime</div>
+			<div class="summary_title">Embroidery</div>
 			<br/>
 			<div class="summary_description"> 
-                I had the joy of staying home with my family in Kansas for a few months while working remotely during the COVID-19 pandemic. We spent countless evenings playing my brother's favorite game, Monopoly, which usually lasted 3+ hours per game since no one could admit they had lost haha! My mom mentioned at one point that her Rubbermaid step stool she was sitting on during these long games was giving her some back pain since it was a bit too low. As a thank-you gift for the wonderful time at home, I made this "Springtime" stool that gave some extra cushioning and comfort at the perfect height.
+                With all the travelling, car camping and moving-around, I needed a small portable project that could go through TSA in a carry-on bag (and unfortunately my punch needle tools don't make the cut). Embroidery to the rescue! Here's a photo dump of keychains and clothes, all gifts :)
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
 				<i class="fas fa-arrow-down"></i>			
@@ -53,28 +53,79 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-        <div class="content_text">I made this stool from a 2x2x8 and 1/2 in. piece of plywood. I didn't make a sketch beforehand, but I knew I wanted something a little funkier than a standard boxy stool. The seat is a stretched hexagonal shape and the legs are slightly angled to create a trapezoid.</div>
-        <img class="summary_image" src="../assets/stool-5.jpg"/>
-        <div class="content_text">The punch needled cushion took the longest -- I initially used an embroidery hoop but soon made a small wooden frame for the cushion. I wanted the flowers to feel slightly raised above the green grass background, so I punch needled the background and foreground on separate sides of the fabric</div>
-        <img class="summary_image" src="../assets/stool-4.jpg"/>
-		<div class="content_text">Close-up view of the "Springtime" pattern. I used the Airtex 2" High Density Foam for the cushion and used a staple gun to attach the fabric to the wood</div>
-        <img class="summary_image" src="../assets/stool-3.jpg"/>
-		<div class="content_text">Top view of the stool</div>
-		<img class="summary_image" src="../assets/stool-2.jpg"/>
+	</br>
+</br>
+		<div class="card_title">Shirts</div>
+        <div class="content_text">Fun gifts for friends and family! The Dartmouth sweatshirts are made with felt that I hand-cut and embroidered onto clothing. Might look into machine embroidery in the future because these actually took forever.
+        </div>
+		<div class="container_sideBySide"> 
+			<div class="sideBySideItem width_50">
+					<img class="summary_image outline" src="../assets/em-shirt4.png"/>
+			</div>
+			<div class="sideBySideItem width_50 sideBySideItem_isLast">
+					<img class="summary_image" src="../assets/em-shirt5.png"/>
+			</div>
+			<div class="sideBySideItem width_50">
+				<img class="summary_image outline" src="../assets/em-shirt1.png"/>
+		</div>
+		<div class="sideBySideItem width_50 sideBySideItem_isLast">
+				<img class="summary_image" src="../assets/em-shirt2.png"/>
+		</div>
+		<div class="sideBySideItem width_50">
+			<img class="summary_image outline" src="../assets/em-shirt3.png"/>
+	</div>
+		</div>
+		<div class="card_title">Patches</div>
+        <div class="content_text">Fun and super portable, but need to do a better job with finishing the edges
+        </div>
+		<div class="container_sideBySide"> 
+				<div class="sideBySideItem width_50">
+                        <img class="summary_image outline" src="../assets/em-patch1.png"/>
+				</div>
+				<div class="sideBySideItem width_50 sideBySideItem_isLast">
+                        <img class="summary_image" src="../assets/em-patch2.png"/>
+                </div>
+                <div class="sideBySideItem width_50">
+					<img class="summary_image outline" src="../assets/em-patch3.png"/>
+			</div>
+			<div class="sideBySideItem width_50 sideBySideItem_isLast">
+					<img class="summary_image" src="../assets/em-patch4.png"/>
+			</div>
+			</div>
+			<div class="card_title">Patches, on hats!</div>
+        <div class="content_text">Same comment about finishing the edges (it's especially bad on my first attempt, rock climbing Keggy). Used Fabric Fuse tape to stick them on the hats.
+        </div>
+			<div class="container_sideBySide"> 
+				<div class="sideBySideItem width_50">
+                        <img class="summary_image outline" src="../assets/em-hats1.png"/>
+				</div>
+				<div class="sideBySideItem width_50 sideBySideItem_isLast">
+                        <img class="summary_image" src="../assets/em-hats2.png"/>
+                </div>
+                <div class="sideBySideItem width_50">
+					<img class="summary_image outline" src="../assets/em-hats3.png"/>
+			</div>
+			<div class="sideBySideItem width_50 sideBySideItem_isLast">
+					<img class="summary_image" src="../assets/em-hats4.png"/>
+			</div>
+			</div>
+	</br>
+</br>
+		
 		<div class="border"></div>
 		
 		<div class="container_sideBySide"> 
 			<div class="sideBySideItem width_50 fixed">
-				<a href="embroidery.html" class="navigation">
+				<a href="metro.html" class="navigation">
 					<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 				</a>
-				<div class="content_text_no_margin">Embroidery</div>
+				<div class="content_text_no_margin">Ode to Metro</div>
 			</div>
 			<div class="sideBySideItem_isLast width_50 align_right fixed">
-				<a href="pilot.html" class="navigation">
+				<a href="springtime.html" class="navigation">
 					<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 				</a>
-				<div class="content_text_no_margin">Pilot</div>
+				<div class="content_text_no_margin">Springtime</div>
 			</div>
 		</div>
 	</div>
