--- a/projects/metro.html
+++ b/projects/metro.html
@@ -87,10 +87,10 @@
 					<div class="content_text_no_margin">Sewing Projects</div>
 				</div>
 				<div class="sideBySideItem_isLast width_50 align_right fixed">
-					<a href="springtime.html" class="navigation">
+					<a href="embroidery.html" class="navigation">
 						<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 					</a>
-					<div class="content_text_no_margin">Springtime</div>
+					<div class="content_text_no_margin">Embroidery</div>
 				</div>
 			</div>
 		
