--- a/misc.html
+++ b/misc.html
@@ -47,7 +47,7 @@
 							I like to push my mind and my body, there's no question about that. I've been called a "rabid morning person" and "5:00 AM hardo". 
 							I wasn't always this way - I discovered my love for sports and the outdoors in college and since then have been sharing my passion and life lessons with anyone who will listen.
 						</br></br>
-							It's not hard to see that these sports have shaped me into the person I am today. Climbing taught me to embrace the "try hard" mentality and gave me a wonderful community I call home. Biking taught me the joys of muscle-powered movement and gave me opportunities to work with non-profit bike advocacy groups. Figure skating taught me the importance of a strong mental game and gave me an avenue to express myself. And now surfing is teaching me to <em>chill the f out</em> and is giving me quality time with my favorite person. 
+							It's not hard to see that these sports have shaped me into the person I am today. Climbing taught me to embrace the "try hard" mentality and gave me a wonderful community I call home. Biking taught me the joys of muscle-powered movement and gave me opportunities to work with non-profit bike advocacy groups. Figure skating taught me the importance of a strong mental game and gave me an avenue to express myself. And now surfing is teaching me to <em>chill out</em> and is giving me quality time with my favorite person. 
 						<!-- </br> </br>   
 							<img class="card_image tiny" src="assets/pond.png"/> -->
 						</div>
