adding lino + ecg rei article

--- a/projects/ecg.html
+++ b/projects/ecg.html
@@ -47,9 +47,10 @@
 			<div class="summary_description"> 
                 What do you get when you mix a month-long vacation opportunity with a budding cyclist going through a quarter-life crisis?  A solo bikepacking trip down the East Coast! In 2021, <b>I cycled 3,000 miles from Calais, Maine to Key West, Florida in 29 days</b>, and set a record speed too (not that it’s a race haha but I am pretty proud of this). I don’t think I can adequately describe how amazing this trip was in few enough words to hold anyone’s interest, so I made a video!
             </br> </br>
-                I dove into this trip with essentially zero bikepacking knowledge and endurance cycling experience, but I made it, and I truly believe anyone who sets their mind to it can accomplish this (and so much more) as well. I’ve documented my planning process and trip thoughts to help you out if you’re interested in biking the East Coast Greenway, too :)
+                I dove into this trip with essentially zero bikepacking knowledge and endurance cycling experience, but I made it, and I truly believe anyone who sets their mind to it can accomplish this (and so much more) as well. I’ve documented my planning process and trip thoughts to help you out if you’re interested in biking the East Coast Greenway, too :D
                 </br> 
                 <a href="https://youtu.be/7F_da3Irx8Q" target="_blank" class="button_primary">Youtube Video <i class="fas fa-external-link-square-alt"></i></a>
+                <a href="https://www.rei.com/blog/cycle/thru-biking-the-east-coast-greenway" target="_blank" class="button_secondary">REI Article <i class="fas fa-external-link-square-alt"></i></a>
                 <a href="https://seniorripper.com/east-coast-greenway/" target="_blank" class="button_secondary">Senior Rippers Article <i class="fas fa-external-link-square-alt"></i></a>
                 <a href="https://careers.appian.com/blog/life-at-appian/take-that-unlimited-pto-biking-down-the-east-coast/" target="_blank" class="button_secondary">Appian Blog Article <i class="fas fa-external-link-square-alt"></i></a>
                 <a href="https://www.greenway.org/stories/meet-23-long-distance-greenway-riders-of-2021" target="_blank" class="button_secondary">East Coast Greenway Feature <i class="fas fa-external-link-square-alt"></i></a>
