--- a/projects/linotime.html
+++ b/projects/linotime.html
@@ -96,6 +96,27 @@
 			</div>
 	</br>
 </br>
+<div class="card_title">"Strong Ladies": Female Athletes who Inspire Me</div>
+<div class="content_text">I'm endlessly inspired by athletes who push the envelope, approach their sport uniquely, or are just so frekaing stoked about what they do. These athletes also happen to be women, and oftentimes women of color which is such a nice bonus when it comes to an often male-dominated sports world. This is a work-in-progress, but so far I've got these lovely, strong ladies:
+	<br/><br/>
+	<div class="container_sideBySide"> 
+		<div class="sideBySideItem width_50">
+			<img class="summary_image" src="../assets/lino-lael.png"/>
+			<div class="image_text"><b>Lael Wilcox |  </b>Ultra-endurance road racer who inspires women (and men!) to ride</div>
+		</div>
+		<div class="sideBySideItem width_50 sideBySideItem_isLast">
+				<img class="summary_image" src="../assets/lino-michelle.png"/>
+				<div class="image_text"><b>Michelle Kwan |  </b>The figure skating GOAT who is the reason I skate</div>
+		</div>
+	<div class="sideBySideItem width_50">
+		<img class="summary_image" src="../assets/lino-ashima.png"/>
+		<div class="image_text"><b>Ashima Shiraishi |  </b>A dancer on the wall who broke records as a kid and continues to amaze with her grace on the rock</div>
+</div>
+	
+	</div>
+</div>
+</br>
+</br>
 		
 		<div class="border"></div>
 		
