moving to main page

--- a/donate.html
+++ b/donate.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Regina | East Coast Greenway</title>
-	<link rel="stylesheet" type="text/css" href="../assets/main.css">
+	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">   
     <script src="https://kit.fontawesome.com/be865165bc.js" crossorigin="anonymous"></script>
-	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
+	<link runat="server" rel="icon" type="image/png" href="assets/favicon-01.png">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143754998-1"></script>
 		<script>
@@ -19,15 +19,15 @@
 </head>
 <body>
 	<div class="head" id="head">
-			<a href="../index.html" class="logo" id="logo"></a>
+			<a href="/index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<!-- <a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a> -->
 			<div class="topnav" id="myTopnav">
-				<a href="../uiux.html" class="unselected">UX</a>
-				<a href="../illustration.html" class="unselected">Digital</a>
-				<a href="../physical.html" class="unselected">Physical</a>
-				<a href="../misc.html" class="unselected">Adventures</a>
-				<a href="../about.html" class="unselected">About</a>
+				<a href="uiux.html" class="unselected">UX</a>
+				<a href="illustration.html" class="unselected">Digital</a>
+				<a href="physical.html" class="unselected">Physical</a>
+				<a href="misc.html" class="unselected">Adventures</a>
+				<a href="about.html" class="unselected">About</a>
 				<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 			</div>
 		</header>
@@ -37,7 +37,7 @@
 <div class="content">
 	<div class="container_summary">
 		<div class="section_summary_text">
-            <img class="summary_image shadow" src="../assets/ecg-cover.png"/>
+            <img class="summary_image shadow" src="assets/ecg-cover.png"/>
 
 			<div class="summary_title">Regina’s Fundraising for the East Coast Greenway Alliance</div>
 			<br/>
@@ -45,14 +45,14 @@
                 <div class="container_callout block padding_more margin_bottom_more">
                     <div class="header_sm bold margin_bottom">How to Donate</div>
                     <div class="flex align_top margin_bottom">
-                        <img class="circle_step" src="../assets/circle-1.svg"/>
+                        <img class="circle_step" src="assets/circle-1.svg"/>
                         <div class="info">
                             <div class="header_sm">Donate through my fundraising link</div>
                             <div class="caption_description">https://greenwaylisa.wufoo.com/forms/pb8wyhg1pw3acu/</div>
                         </div>
                     </div>
                     <div class="flex align_top">
-                        <img class="circle_step" src="../assets/circle-2.svg"/>
+                        <img class="circle_step" src="assets/circle-2.svg"/>
                         <div class="info">
                             <div class="header_sm">Send me a <strong>screenshot of your donation</strong>, your <strong>address</strong>, and which <strong>item(s)</strong> you’d like</div>
                             <div class="caption_description">Instagram DM: @designbyregina
@@ -75,7 +75,7 @@
                         <div class="header_sm margin_bottom">
                             <strong>Linoleum Print</strong> - Minimum $20 donation
                         </div>
-                        <img class="summary_image" src="../assets/lino-reggie1.png"/>
+                        <img class="summary_image" src="assets/lino-reggie1.png"/>
                         <div class="caption_description">This linoleum print is 8 in. by 10 in. and printed with black ink on premium cardstock paper.</div>
                     </div>
                     <div class="item">
