--- a/donate.html
+++ b/donate.html
@@ -47,7 +47,7 @@
                     <div class="flex align_top margin_bottom">
                         <img class="circle_step" src="assets/circle-1.svg"/>
                         <div class="info">
-                            <div class="header_sm">Donate through my fundraising link</div>
+                            <div class="header_sm">Donate through my <a class="link" target="_blank" href="https://greenwaylisa.wufoo.com/forms/pb8wyhg1pw3acu/">fundraising link</a></div>
                             <div class="caption_description">https://greenwaylisa.wufoo.com/forms/pb8wyhg1pw3acu/</div>
                         </div>
                     </div>
