added postcard images

--- a/donate.html
+++ b/donate.html
@@ -69,6 +69,17 @@
                         <div class="header_sm margin_bottom">
                             <strong>State Postcard</strong> - Minimum $5 donation each
                         </div>
+						<div class="container_sideBySide"> 
+							<div class="sideBySideItem width_50">
+									<img class="summary_image" src="assets/ecga-connecticut.png"/>
+							</div>
+							<div class="sideBySideItem width_50 sideBySideItem_isLast">
+									<img class="summary_image" src="assets/ecga-newyork.png"/>
+							</div>
+							<!-- <div class="sideBySideItem width_33 sideBySideItem_isLast">
+									
+							</div> -->
+						</div>
                         <div class="caption_description">I’m slowly adding more Greenway states, so stay tuned if you don't see the state you want! I used high quality archival (this means it doesn't fade or smudge!) on cardstock. Approx 2.6 in. by 4 in.</div>
                     </div>
                     <div class="item borderBottom">
