adding t-shirt images

--- a/donate.html
+++ b/donate.html
@@ -37,7 +37,7 @@
 <div class="content">
 	<div class="container_summary">
 		<div class="section_summary_text">
-            <img class="summary_image shadow" src="assets/ecg-cover.png"/>
+            <img class="summary_image shadow" src="assets/ecga-donate.png"/>
 
 			<div class="summary_title">Regina’s Fundraising for the East Coast Greenway Alliance</div>
 			<br/>
@@ -67,7 +67,7 @@
                     <div class="summary_title reggie">Items</div>
                     <div class="item borderBottom">
                         <div class="header_sm margin_bottom">
-                            <strong>State Postcard</strong> - Minimum $5 donation each
+                            <strong>State Card</strong> - Minimum $5 donation each
                         </div>
 						<div class="container_sideBySide"> 
 							<div class="sideBySideItem width_50">
@@ -93,6 +93,17 @@
                         <div class="header_sm margin_bottom">
                             <strong>Embroidered T-Shirt</strong> - Minimum $50 donation
                         </div>
+						<div class="container_sideBySide"> 
+							<div class="sideBySideItem width_50">
+									<img class="summary_image" src="assets/ecga-shirt1.png"/>
+							</div>
+							<div class="sideBySideItem width_50 sideBySideItem_isLast">
+									<img class="summary_image" src="assets/ecga-shirt2.png"/>
+							</div>
+							<!-- <div class="sideBySideItem width_33 sideBySideItem_isLast">
+									
+							</div> -->
+						</div>
                         <div class="caption_description">Libraries are my favorite place in the world, and that’s partly due to their maker spaces -- I machine embroidered these t-shirts at the San Diego IDEA Lab. It’s a Bella Canvas T-shirt in Heather Dusty Blue (52% cotton and 48% polyster) with a dark green rayon embroidery thread.</div>
                     </div>
                 </div>
