--- a/projects/humbug.html
+++ b/projects/humbug.html
@@ -7,13 +7,13 @@
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143754998-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-0JBLS4C2NB"></script>
 		<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 	
-		gtag('config', 'UA-143754998-1');
+		gtag('config', 'G-0JBLS4C2NB');
 		</script>
 </head>
 <body>
