--- a/projects/tsd.html
+++ b/projects/tsd.html
@@ -11,12 +11,12 @@
 	<script src="https://kit.fontawesome.com/be865165bc.js" crossorigin="anonymous"></script>
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143754998-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-0JBLS4C2NB"></script>
 		<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());	
-		gtag('config', 'UA-143754998-1');
+		gtag('config', 'G-0JBLS4C2NB');
 		</script>
 </head>
 <body>
