--- a/projects/foca17.html
+++ b/projects/foca17.html
@@ -211,12 +211,54 @@
                 <img class="summary_image" src="../assets/skating-lake.gif"/>
             </div>
             <div class="card_tag incontent">San Francisco, CA</div>
-            <div class="card_title">February 2023-May 2023: Getting my first Level 4 (ish) spin!!</div>
+            <div class="card_title">February-May 2023: Getting my first Level 4 (ish) spin!!</div>
             <div class="content_text">
                 I actually don't think this gif fully counts as a level 4 spin, but if done with a little more ~polish and pizzazz~ it would! It's a camel spin, difficult windmill transition (level 1), sit spin, sit back variation (level 2), non-basic position but pretend it's a little better (level 3), upright variation (level 4!!!)
                 <br/><br/>
                 Also I HIGHLY recommend the Yerba Buena ice rink - the natural light is AMAZING and the adult skating community is so supportive<br/><br/>
                 <img class="summary_image" src="../assets/skating-spin-small.gif"/>
+            </div>
+            <div class="card_tag incontent">Kapolei, HI</div>
+            <div class="card_title">June-August 2023: Off-ice training</div>
+            <div class="content_text">
+                Spending 2 months in Hawaii? Hooray! Spending 2 months off the ice? Boooo. I did manage to make it to the rink twice, but otherwise I focused on off-ice jumps a couple times a week and worked on more spin position ideas. At some point I also developed a bunion / expansion of my left pinky metatarsal which made my boot EXTREMELY painful - thankfully Kevin, the skate tech at the rink, fixed the problem by punching out the boot.
+                <br/><br/>
+                <div class="container_sideBySide"> 
+                    <div class="sideBySideItem width_50">
+                            <img class="summary_image" src="../assets/skating-hawaii.gif"/>
+                    </div>
+                    <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/skating-boot.png"/>
+                    </div>
+                </div>
+            </div>
+            <div class="card_tag incontent">San Diego, CA</div>
+            <div class="card_title">September 2023 - Current: Focused Training + Creating a program</div>
+            <div class="content_text">
+                Time goes by SO QUICKLY! There's less than 6 months until Sectionals (qualification for nationals), and I don't have a program or a focused training plan. We just moved to San Diego, and I did/am doing (this is present day, hello) a couple things:
+                <div class="bullet_list">
+                    <div class="bullet">1. Renewed my US Figure Skating membership and joined the San Diego Figure Skating Club </div>
+                    <div class="bullet">2. Created a training plan for my spins + jumps + skating skills + program choreography for each month leading up to Sectionals </div>
+                    <div class="container_sideBySide"> 
+                        <div class="sideBySideItem width_50">
+                                <img class="summary_image" src="../assets/skating-plan.png"/>
+                        </div>
+                        <div class="sideBySideItem width_50">
+                        </div>
+                    </div>
+                    <div class="bullet">3. Picked music - I stumbled upon the Muse song "Madness" one day and immediately clicked with it. It's going to make such a FUN PROGRAM </div>
+                    <div class="bullet">4. Joined the San Diego Ballet's free weekend adult classes to work on my posture and poise (some of the weakest parts of my skating) </div>
+                    <div class="container_sideBySide"> 
+                        <div class="sideBySideItem width_50">
+                                <img class="summary_image" src="../assets/skating-ballet.png"/>
+                        </div>
+                        <div class="sideBySideItem width_50">
+                        </div>
+                    </div>
+                    
+
+                </div>
+                <br/><br/>
             </div>
 
 		<br>
