add SuperPay project

--- a/projects/appian.html
+++ b/projects/appian.html
@@ -44,7 +44,7 @@
 			<div class="summary_title">Appian</div>
 			<br/>
 			<div class="summary_description"> 
-                    As a UX Designer at Appian, I work on features for the platform's DevOps capabilities, advocate for UX best practices on Customer Success projects, and lead a product illustration team
+                    As a UX Designer at Appian, I worked on features for the platform's DevOps capabilities, advocated for UX best practices on Customer Success projects, and led a product illustration team
                     <!-- As a UX Designer at Appian, I worked on features for the platform's DevOps capabilities, re-designed a new look and experience for onboarding users, and spearheaded a product illustration initiative -->
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
@@ -148,16 +148,20 @@
 	</div>
 </br>
 	<div class="border"></div>
-			<div class="container_sideBySide"> 
-					<div class="sideBySideItem width_50 fixed">
-					</div>
-					<div class="sideBySideItem_isLast width_50 align_right">
-						<a href="trailhead2.html" class="navigation">
-							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
-						</a>
-						<div class="content_text_no_margin">Trailhead 2.0</div>
-					</div>
-				</div>
+	<div class="container_sideBySide"> 
+		<div class="sideBySideItem width_50 fixed">
+			<a href="superpay.html" class="navigation">
+				<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+			</a>
+			<div class="content_text_no_margin">SuperPay</div>
+		</div>
+		<div class="sideBySideItem_isLast width_50 align_right fixed">
+			<a href="trailhead2.html" class="navigation">
+				<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+			</a>
+			<div class="content_text_no_margin">Trailhead 2.0</div>
+		</div>
+	</div>
     </div>
 </div>
 <div class="footer">
