--- a/uiux.html
+++ b/uiux.html
@@ -53,6 +53,17 @@
 				I've found that I emphasize pragmatism in my approach, and simplicity (with a hint of playfulness) in my designs. I'm still learning and still growing, and I'm so excited to see what impactful problems we can solve with thoughtful user experience.
 			</div>
 			</div>
+			<a href="projects/superpay.html" class="card">
+				<img class="card_image outline" src="assets/superpay-cover.svg"/>
+				<div class="card_title">SuperBill: SuperPay</div>
+				<div class="card_description">Mostly Designing (but also Building, PM-ing, Marketing) an out-of-network claim-filing platform for patients and providers</div>
+				<div class="card_tag_container">
+						<div class="card_tag ux">UX/UI</div>
+						<div class="card_tag htmlcss">HTML/CSS</div>
+					<div class="card_tag htmlcss">Javascript</div>
+					<div class="card_tag htmlcss">React</div>
+				</div>
+			</a>
 			<a href="projects/appian.html" class="card">
 				<img class="card_image" src="assets/appian-2.png"/>
 				<div class="card_title">Appian</div>
